# FET-prototype

./: .gitignore  README.md  pyproject.toml
FET-prototype/: CHART_runup_OT_demo.py
data/clean/python_outputs/: lc_0_Eurotop_Q_response.csv  lc_0_Eurotop_responses.csv  lc_0_volume_stage.csv  lc_100_Eurotop_Q_response.csv  lc_100_Eurotop_responses.csv  lc_101_Eurotop_Q_response.csv  lc_101_Eurotop_responses.csv  lc_102_Eurotop_Q_response.csv  lc_102_Eurotop_responses.csv  lc_103_Eurotop_Q_response.csv  lc_103_Eurotop_responses.csv  lc_104_Eurotop_Q_response.csv  lc_104_Eurotop_responses.csv  lc_105_Eurotop_Q_response.csv  lc_105_Eurotop_responses.csv  lc_106_Eurotop_Q_response.csv  lc_106_Eurotop_responses.csv  lc_107_Eurotop_Q_response.csv  lc_107_Eurotop_responses.csv  lc_108_Eurotop_Q_response.csv  lc_108_Eurotop_responses.csv  lc_109_Eurotop_Q_response.csv  lc_109_Eurotop_responses.csv  lc_10_Eurotop_Q_response.csv  lc_10_Eurotop_responses.csv  lc_110_Eurotop_Q_response.csv  lc_110_Eurotop_responses.csv  lc_111_Eurotop_Q_response.csv  lc_111_Eurotop_responses.csv  lc_112_Eurotop_Q_response.csv  lc_112_Eurotop_responses.csv  lc_113_Eurotop_Q_response.csv  lc_113_Eurotop_responses.csv  lc_114_Eurotop_Q_response.csv  lc_114_Eurotop_responses.csv  lc_115_Eurotop_Q_response.csv  lc_115_Eurotop_responses.csv  lc_116_Eurotop_Q_response.csv  lc_116_Eurotop_responses.csv  lc_117_Eurotop_Q_response.csv  (+1961 more)
data/raw/: Deer_Island_mat_str.txt
src/: CHART_runup_OT_demo.py
